Settings class initialization continued

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -1985,7 +1985,7 @@ color: #e6e6e6;
        </widget>
        <widget class="QWidget" name="stats"/>
        <widget class="QWidget" name="settings">
-        <widget class="QWidget" name="gridWidget" native="true">
+        <widget class="QWidget" name="settingsWidget" native="true">
          <property name="geometry">
           <rect>
            <x>0</x>
@@ -1997,163 +1997,7 @@ color: #e6e6e6;
          <property name="styleSheet">
           <string notr="true"/>
          </property>
-         <layout class="QGridLayout" name="gridLayout_2">
-          <item row="1" column="0">
-           <layout class="QVBoxLayout" name="verticalLayout_9">
-            <property name="spacing">
-             <number>2</number>
-            </property>
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_12">
-              <item>
-               <widget class="QFrame" name="verticalFrame_10">
-                <property name="styleSheet">
-                 <string notr="true">QFrame{
-border: 1.5px solid #00ffc1;
-border-radius: 4px;
-padding: 2px;
-color: #00ffc1;
-background: transparent;
-}</string>
-                </property>
-                <layout class="QVBoxLayout" name="verticalLayout_14">
-                 <property name="spacing">
-                  <number>2</number>
-                 </property>
-                 <property name="leftMargin">
-                  <number>0</number>
-                 </property>
-                 <property name="topMargin">
-                  <number>0</number>
-                 </property>
-                 <property name="rightMargin">
-                  <number>0</number>
-                 </property>
-                 <property name="bottomMargin">
-                  <number>0</number>
-                 </property>
-                 <item>
-                  <widget class="QFrame" name="verticalFrame_8">
-                   <property name="maximumSize">
-                    <size>
-                     <width>16777215</width>
-                     <height>30</height>
-                    </size>
-                   </property>
-                   <property name="styleSheet">
-                    <string notr="true"/>
-                   </property>
-                   <layout class="QVBoxLayout" name="verticalLayout_16">
-                    <property name="spacing">
-                     <number>0</number>
-                    </property>
-                    <property name="sizeConstraint">
-                     <enum>QLayout::SetDefaultConstraint</enum>
-                    </property>
-                    <property name="leftMargin">
-                     <number>0</number>
-                    </property>
-                    <property name="topMargin">
-                     <number>0</number>
-                    </property>
-                    <property name="rightMargin">
-                     <number>0</number>
-                    </property>
-                    <property name="bottomMargin">
-                     <number>0</number>
-                    </property>
-                    <item>
-                     <widget class="QLabel" name="label_2">
-                      <property name="styleSheet">
-                       <string notr="true">border: none;
-padding: 2px;
-font: 75 italic 12pt &quot;Halvetica&quot; ;
-color: #e6e6e6;</string>
-                      </property>
-                      <property name="text">
-                       <string>Connections</string>
-                      </property>
-                      <property name="alignment">
-                       <set>Qt::AlignCenter</set>
-                      </property>
-                     </widget>
-                    </item>
-                   </layout>
-                  </widget>
-                 </item>
-                 <item>
-                  <layout class="QVBoxLayout" name="verticalLayout_15"/>
-                 </item>
-                </layout>
-               </widget>
-              </item>
-              <item>
-               <widget class="QFrame" name="verticalFrame_9">
-                <property name="styleSheet">
-                 <string notr="true">QFrame{
-border: 1.5px solid #00ffc1;
-border-radius: 4px;
-padding: 2px;
-color: #00ffc1;
-background: transparent;
-}</string>
-                </property>
-                <layout class="QVBoxLayout" name="verticalLayout_13">
-                 <property name="spacing">
-                  <number>2</number>
-                 </property>
-                </layout>
-               </widget>
-              </item>
-             </layout>
-            </item>
-           </layout>
-          </item>
-          <item row="0" column="0">
-           <layout class="QVBoxLayout" name="verticalLayout_10">
-            <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_10">
-              <item>
-               <widget class="QFrame" name="verticalFrame_8">
-                <property name="styleSheet">
-                 <string notr="true">QFrame{
-border: 1.5px solid #00ffc1;
-border-radius: 4px;
-padding: 2px;
-color: #00ffc1;
-background: transparent;
-}</string>
-                </property>
-                <layout class="QVBoxLayout" name="verticalLayout_12">
-                 <property name="spacing">
-                  <number>2</number>
-                 </property>
-                </layout>
-               </widget>
-              </item>
-              <item>
-               <widget class="QFrame" name="verticalFrame_7">
-                <property name="styleSheet">
-                 <string notr="true">QFrame{
-border: 1.5px solid #00ffc1;
-border-radius: 4px;
-padding: 2px;
-color: #00ffc1;
-background: transparent;
-}</string>
-                </property>
-                <layout class="QVBoxLayout" name="verticalLayout_11">
-                 <property name="spacing">
-                  <number>2</number>
-                 </property>
-                </layout>
-               </widget>
-              </item>
-             </layout>
-            </item>
-           </layout>
-          </item>
-         </layout>
+         <layout class="QGridLayout" name="gridLayout_2"/>
         </widget>
        </widget>
       </widget>
