--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -30,27 +30,51 @@
     <string notr="true"/>
    </property>
    <layout class="QGridLayout" name="gridLayout_2">
+    <property name="leftMargin">
+     <number>4</number>
+    </property>
+    <property name="topMargin">
+     <number>4</number>
+    </property>
+    <property name="rightMargin">
+     <number>4</number>
+    </property>
+    <property name="bottomMargin">
+     <number>4</number>
+    </property>
+    <property name="spacing">
+     <number>4</number>
+    </property>
     <item row="1" column="0">
      <layout class="QVBoxLayout" name="verticalLayout_9">
       <property name="spacing">
-       <number>2</number>
+       <number>0</number>
       </property>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_12">
+        <property name="spacing">
+         <number>0</number>
+        </property>
         <item>
          <widget class="QFrame" name="verticalFrame_10">
+          <property name="maximumSize">
+           <size>
+            <width>332</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="styleSheet">
            <string notr="true">QFrame{
 border: 1.5px solid #00ffc1;
-border-radius: 4px;
-padding: 2px;
+border-radius: 0px;
+padding: 0px;
 color: #00ffc1;
 background: transparent;
 }</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_14">
            <property name="spacing">
-            <number>2</number>
+            <number>0</number>
            </property>
            <property name="leftMargin">
             <number>0</number>
@@ -111,11 +135,11 @@ background: transparent;
                 <property name="styleSheet">
                  <string notr="true">border: none;
 padding: 2px;
-font: 75 italic 12pt &quot;Halvetica&quot; ;
+font: 75 italic bold 12pt &quot;Halvetica&quot; ;
 color: #e6e6e6;</string>
                 </property>
                 <property name="text">
-                 <string>Connection</string>
+                 <string>CONNECTION</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -127,21 +151,343 @@ color: #e6e6e6;</string>
            </item>
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_15">
+             <property name="spacing">
+              <number>0</number>
+             </property>
              <item>
-              <spacer name="verticalSpacer">
-               <property name="orientation">
-                <enum>Qt::Vertical</enum>
+              <layout class="QVBoxLayout" name="verticalLayout_7">
+               <property name="spacing">
+                <number>0</number>
                </property>
-               <property name="sizeType">
-                <enum>QSizePolicy::Fixed</enum>
+               <item>
+                <layout class="QHBoxLayout" name="horizontalLayout">
+                 <property name="spacing">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QFrame" name="verticalFrame_3">
+                   <property name="maximumSize">
+                    <size>
+                     <width>110</width>
+                     <height>16777215</height>
+                    </size>
+                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_32">
+                    <property name="spacing">
+                     <number>0</number>
+                    </property>
+                    <property name="leftMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>0</number>
+                    </property>
+                    <item>
+                     <layout class="QVBoxLayout" name="verticalLayout_30">
+                      <property name="spacing">
+                       <number>0</number>
+                      </property>
+                      <item>
+                       <widget class="QLabel" name="label_5">
+                        <property name="styleSheet">
+                         <string notr="true">border: none;
+padding: 2px;
+font: 75 bold 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;</string>
+                        </property>
+                        <property name="text">
+                         <string>CAN SPEED</string>
+                        </property>
+                        <property name="alignment">
+                         <set>Qt::AlignCenter</set>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                    <item>
+                     <layout class="QVBoxLayout" name="verticalLayout_31">
+                      <property name="spacing">
+                       <number>0</number>
+                      </property>
+                      <item>
+                       <widget class="QComboBox" name="comboBox_3">
+                        <property name="minimumSize">
+                         <size>
+                          <width>0</width>
+                          <height>30</height>
+                         </size>
+                        </property>
+                        <property name="styleSheet">
+                         <string notr="true">background-color: rgb(85,85,85);</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item>
+                  <layout class="QVBoxLayout" name="verticalLayout_18">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
+                   <item>
+                    <widget class="QFrame" name="verticalFrame_5">
+                     <property name="minimumSize">
+                      <size>
+                       <width>0</width>
+                       <height>70</height>
+                      </size>
+                     </property>
+                     <property name="maximumSize">
+                      <size>
+                       <width>16777215</width>
+                       <height>70</height>
+                      </size>
+                     </property>
+                     <layout class="QVBoxLayout" name="verticalLayout_23">
+                      <property name="spacing">
+                       <number>0</number>
+                      </property>
+                      <property name="leftMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="topMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="rightMargin">
+                       <number>0</number>
+                      </property>
+                      <property name="bottomMargin">
+                       <number>0</number>
+                      </property>
+                      <item>
+                       <layout class="QVBoxLayout" name="verticalLayout_24">
+                        <property name="spacing">
+                         <number>0</number>
+                        </property>
+                        <item>
+                         <widget class="QLabel" name="label_4">
+                          <property name="styleSheet">
+                           <string notr="true">border: none;
+padding: 2px;
+font: 75 bold 10pt &quot;Halvetica&quot; ;
+color: #e6e6e6;</string>
+                          </property>
+                          <property name="text">
+                           <string>CAN MODE</string>
+                          </property>
+                          <property name="alignment">
+                           <set>Qt::AlignCenter</set>
+                          </property>
+                         </widget>
+                        </item>
+                       </layout>
+                      </item>
+                      <item>
+                       <layout class="QVBoxLayout" name="verticalLayout_25">
+                        <property name="spacing">
+                         <number>0</number>
+                        </property>
+                        <item>
+                         <layout class="QHBoxLayout" name="horizontalLayout_4">
+                          <property name="spacing">
+                           <number>0</number>
+                          </property>
+                          <item>
+                           <layout class="QVBoxLayout" name="verticalLayout_27">
+                            <property name="spacing">
+                             <number>2</number>
+                            </property>
+                            <property name="rightMargin">
+                             <number>1</number>
+                            </property>
+                            <item>
+                             <widget class="QRadioButton" name="radioButton">
+                              <property name="minimumSize">
+                               <size>
+                                <width>0</width>
+                                <height>30</height>
+                               </size>
+                              </property>
+                              <property name="styleSheet">
+                               <string notr="true">padding: 2px;
+font: 9pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+background-color: rgb(85,85,85);</string>
+                              </property>
+                              <property name="text">
+                               <string>TEST</string>
+                              </property>
+                             </widget>
+                            </item>
+                           </layout>
+                          </item>
+                          <item>
+                           <layout class="QVBoxLayout" name="verticalLayout_26">
+                            <property name="spacing">
+                             <number>2</number>
+                            </property>
+                            <property name="leftMargin">
+                             <number>1</number>
+                            </property>
+                            <item>
+                             <widget class="QRadioButton" name="radioButton_2">
+                              <property name="minimumSize">
+                               <size>
+                                <width>0</width>
+                                <height>30</height>
+                               </size>
+                              </property>
+                              <property name="styleSheet">
+                               <string notr="true">padding: 2px;
+font: 9pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+background-color: rgb(85,85,85);
+</string>
+                              </property>
+                              <property name="text">
+                               <string>CONVERTER</string>
+                              </property>
+                             </widget>
+                            </item>
+                           </layout>
+                          </item>
+                         </layout>
+                        </item>
+                       </layout>
+                      </item>
+                     </layout>
+                    </widget>
+                   </item>
+                  </layout>
+                 </item>
+                </layout>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QVBoxLayout" name="verticalLayout_8">
+               <property name="spacing">
+                <number>0</number>
                </property>
-               <property name="sizeHint" stdset="0">
-                <size>
-                 <width>0</width>
-                 <height>175</height>
-                </size>
-               </property>
-              </spacer>
+               <item>
+                <layout class="QHBoxLayout" name="horizontalLayout_2">
+                 <property name="spacing">
+                  <number>0</number>
+                 </property>
+                 <item>
+                  <widget class="QFrame" name="verticalFrame_6">
+                   <property name="minimumSize">
+                    <size>
+                     <width>110</width>
+                     <height>0</height>
+                    </size>
+                   </property>
+                   <property name="maximumSize">
+                    <size>
+                     <width>110</width>
+                     <height>16777215</height>
+                    </size>
+                   </property>
+                   <layout class="QVBoxLayout" name="verticalLayout_20">
+                    <property name="spacing">
+                     <number>0</number>
+                    </property>
+                    <property name="leftMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>0</number>
+                    </property>
+                    <item>
+                     <layout class="QHBoxLayout" name="horizontalLayout_5">
+                      <property name="spacing">
+                       <number>0</number>
+                      </property>
+                      <item>
+                       <widget class="QCheckBox" name="checkBox_2">
+                        <property name="minimumSize">
+                         <size>
+                          <width>0</width>
+                          <height>47</height>
+                         </size>
+                        </property>
+                        <property name="styleSheet">
+                         <string notr="true">border: none;
+padding: 2px;
+font: 75 bold 9pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+background-color: rgb(85,85,85);</string>
+                        </property>
+                        <property name="text">
+                         <string>Debbuger</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                    <item>
+                     <layout class="QHBoxLayout" name="horizontalLayout_3">
+                      <property name="spacing">
+                       <number>0</number>
+                      </property>
+                      <item>
+                       <widget class="QCheckBox" name="checkBox">
+                        <property name="minimumSize">
+                         <size>
+                          <width>0</width>
+                          <height>47</height>
+                         </size>
+                        </property>
+                        <property name="styleSheet">
+                         <string notr="true">border: none;
+padding: 2px;
+font: 75 bold 9pt &quot;Halvetica&quot; ;
+color: #e6e6e6;
+background-color: rgb(85,85,85);</string>
+                        </property>
+                        <property name="text">
+                         <string>Debbuger</string>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
+                    </item>
+                   </layout>
+                  </widget>
+                 </item>
+                 <item>
+                  <layout class="QVBoxLayout" name="verticalLayout_19">
+                   <property name="spacing">
+                    <number>0</number>
+                   </property>
+                   <item>
+                    <widget class="QTextEdit" name="textEdit">
+                     <property name="styleSheet">
+                      <string notr="true">background-color: rgb(85,85,85);</string>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </item>
+                </layout>
+               </item>
+              </layout>
              </item>
             </layout>
            </item>
@@ -222,11 +568,11 @@ background: transparent;
                 <property name="styleSheet">
                  <string notr="true">border: none;
 padding: 2px;
-font: 75 italic 12pt &quot;Halvetica&quot; ;
+font: 75 italic bold 12pt &quot;Halvetica&quot; ;
 color: #e6e6e6;</string>
                 </property>
                 <property name="text">
-                 <string>Limits</string>
+                 <string>LIMITS</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -335,7 +681,7 @@ background: transparent;
                 <property name="styleSheet">
                  <string notr="true">border: none;
 padding: 2px;
-font: 75 italic 12pt &quot;Halvetica&quot; ;
+font: 75 italic bold 12pt &quot;Halvetica&quot; ;
 color: #e6e6e6;</string>
                 </property>
                 <property name="text">
@@ -443,11 +789,11 @@ background: transparent;
                 <property name="styleSheet">
                  <string notr="true">border: none;
 padding: 2px;
-font: 75 italic 12pt &quot;Halvetica&quot; ;
+font: 75 italic bold 12pt &quot;Halvetica&quot; ;
 color: #e6e6e6;</string>
                 </property>
                 <property name="text">
-                 <string>Theme</string>
+                 <string>THEME</string>
                 </property>
                 <property name="alignment">
                  <set>Qt::AlignCenter</set>
@@ -474,6 +820,9 @@ color: #e6e6e6;</string>
                 </size>
                </property>
               </spacer>
+             </item>
+             <item>
+              <widget class="QComboBox" name="comboBox"/>
              </item>
             </layout>
            </item>
